<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_updatePerson_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/updatePerson_header_text"
        android:textAlignment="center"
        android:textSize="@dimen/textSize_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_updatePerson_title_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/tv_updatePerson_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_updatePerson_name_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/newPerson_name_inputHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_updatePerson_dob_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/til_updatePerson_title_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_updatePerson_dob_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Enter dob (mm/dd/yyyy)" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_updatePerson_img_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/til_updatePerson_dob_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_updatePerson_img_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/newPerson_img_inputHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_updatePerson_details_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintTop_toBottomOf="@id/til_updatePerson_img_input"
        app:layout_constraintBottom_toTopOf="@id/b_updatePerson_save">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_updatePerson_details_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:scrollbars="vertical"
            android:hint="@string/newPerson_details_inputHint"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_updatePerson_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_updatePerson_details_input"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/updatePerson_saveText"/>


</androidx.constraintlayout.widget.ConstraintLayout>